--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "del": "^2.2.0",
     "estraverse-fb": "^1.3.1",
     "event-stream": "^3.3.2",
+    "fs": "0.0.2",
+    "fuzzy": "^0.1.1",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -32,12 +34,14 @@
     "laravel-elixir": "*",
     "laravel-elixir-browser-sync-simple": "^2.1.0",
     "mocha": "^2.4.5",
+    "path": "^0.12.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "zxcvbn": "^4.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.12.3",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-git": "^1.7.1"
   }
 }
